--- a/css/styles.css
+++ b/css/styles.css
@@ -440,9 +440,59 @@
     width: 208px;
     height: 80px;
 }
-.e-mail-input {
+.form {
     width: 453px;
-    height: 80px;
+    height: 80px; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;   
+}
+.email { 
+    border: 2px solid var(--white);
+    border-radius: 4px;
+    width: 264px;
+    height: 40px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    margin-right: 15px;
+    padding: 0;
+}
+.input:focus {
+    cursor: pointer;
+    outline:2px solid red ;
+}
+.group-title {
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0.02em;
+    color: var(--white);
+    margin-top: 0;
+}
+.icon-frame {
+    width: 24px;
+    height: 24px;
+    margin-left: 15px;  
+}
+.subscribe-txt {
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0.04em;
+    text-align: center;
+    color: var(--white);
+    margin: auto;
+}
+.subscribe-btn {
+    display: inline-flex;
+    padding: 8px 24px;
+    border-radius: 4px;
+    width: 165px;
+    height: 45px;
+    background: var(--iris);
+    color:#fff;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .wrap-portofolio {
