--- a/css/styles.css
+++ b/css/styles.css
@@ -246,10 +246,48 @@
     height: 584px;
     position: relative;
     box-shadow: 0 2px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 1px 1px 0 rgba(0, 0, 0, 0.14);
-    background-color: var(--white);
-    
+    background-color: var(--white);  
+}
+.modal {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+   
    
 }
+.form-label {
+    width: 360px;
+    height: 58px;
+}
+.form-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 4px;
+    width: 360px;
+    height: 336px;
+}
+.input {
+    width: 360px;
+    height: 58px;
+}
+.textarea {
+    width: 360px;
+    height: 138px;
+}
+
+.contact-details-head {
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: var(--navy-blue);
+}
+
+
 .close-btn {
     width: 24px;
     height: 24px;
