--- a/css/styles.css
+++ b/css/styles.css
@@ -260,19 +260,40 @@
 .modal {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-   
-   
+    justify-content: space-evenly;
+    align-items: center;  
+}
+.modal-title {
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: var(--navy-blue);
+    margin-top: 40px, auto;
 }
 .form-label {
-    width: 360px;
-    height: 58px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 365px;
+    height: 60px;
+    margin-top: 8px;
+}
+.f-n { 
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 117%;
+    letter-spacing: 0.04em;
+    color: var(--light-slate);
+    margin: 0;
 }
 .form-content {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     border-radius: 4px;
     width: 360px;
     height: 336px;
@@ -284,7 +305,74 @@
 .textarea {
     width: 360px;
     height: 138px;
+    margin-top: 8px;
 }
+.checkbox {
+    display: inline-flex;
+    width: 360px;
+    height: 16px;
+}
+.text-checkbox {
+    width: 360px;
+    height: 16px;
+    margin: 0 auto;
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 117%;
+    letter-spacing: 0.04em;
+    color: var(--light-slate);
+}
+.checkbox-svg {
+    width: 16px;
+    height: 16px;
+    border-radius: 2px;
+    border: 1px solid var(--navy-blue-modal);
+    margin-right: 5px;
+}
+.input-span {
+    line-height: 133%;
+    text-decoration: underline;
+    text-decoration-skip-ink: none;
+    color: var(--iris);
+    cursor: pointer ;
+}
+.textarea-input {
+    border: 1px solid var(--navy-blue-modal);
+    border-radius: 4px;
+    width: 360px;
+    height: 120px;
+}
+.name-input {
+    border: 1px solid var(--navy-blue-modal);
+    border-radius: 4px;
+    width: 360px;
+    height: 40px;
+}
+.phone-input {
+    border: 1px solid var(--navy-blue-modal);
+    border-radius: 4px;
+    width: 360px;
+    height: 40px;
+}
+.email-input {
+    border: 1px solid var(--navy-blue-modal);
+    border-radius: 4px;
+    width: 360px;
+    height: 40px;
+}
+.btn-send {
+    border-radius: 4px;
+    padding: 16px 32px;
+    width: 169px;
+    height: 56px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    background: var(--iris);
+    color:#fff;
+
+}
+
+
 
 .close-btn {
     width: 24px;
