--- a/css/styles.css
+++ b/css/styles.css
@@ -273,94 +273,130 @@
     color: var(--navy-blue);
     margin-top: 40px, auto;
 }
-.form-label {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    width: 365px;
-    height: 60px;
-    margin-top: 8px;
-}
-.f-n { 
-    font-family: var(--font-family);
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 117%;
-    letter-spacing: 0.04em;
-    color: var(--light-slate);
-    margin: 0;
-}
 .form-content {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
     border-radius: 4px;
     width: 360px;
     height: 336px;
 }
-.input {
+.form-group {
     width: 360px;
     height: 58px;
-}
-.textarea {
-    width: 360px;
-    height: 138px;
     margin-top: 8px;
+    margin-bottom: 8px;
 }
-.checkbox {
-    display: inline-flex;
+.input-icon {
+    position: relative;
+    border: 1px solid var(--navy-blue-modal);
+    border-radius: 4px;
+    width: 360px;
+    height: 40px;
+}
+.name-icon {
+    padding: 3px 0px;
+    width: 18px;
+    height: 24px;
+    fill: var(--navy-blue-modal);
+    position: absolute;
+    left: 5px;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: -250ms cubic-bezier(0.4, 0, 0.2, 1 );
+}
+.name-input {
+    border: 1px solid var(--navy-blue-modal);
+    border-radius: 4px;
+    width: 360px;
+    height: 40px;   
+}
+.name-input,
+.name-icon:hover {
+     fill: var(--iris);
+}
+.frame2 {
+   display: inline-flex;
+   margin-top: 20px;  
+}
+.chechbox {
+    display: inline;
+    border-radius: 4px;
     width: 360px;
     height: 16px;
-}
-.text-checkbox {
-    width: 360px;
-    height: 16px;
-    margin: 0 auto;
-    font-family: var(--font-family);
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 117%;
-    letter-spacing: 0.04em;
-    color: var(--light-slate);
+    margin-top: 8px;
 }
 .checkbox-svg {
     width: 16px;
     height: 16px;
     border-radius: 2px;
     border: 1px solid var(--navy-blue-modal);
-    margin-right: 5px;
+    margin-right: 10px;
+}
+.text-checkbox {
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 117%;
+    letter-spacing: 0.04em;
+    color: var(--light-slate);
+    margin: 0;    
 }
 .input-span {
     line-height: 133%;
     text-decoration: underline;
     text-decoration-skip-ink: none;
     color: var(--iris);
-    cursor: pointer ;
+    cursor: pointer;
 }
+.f-n {
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 117%;
+    letter-spacing: 0.04em;
+    color: var(--light-slate);
+    margin-bottom: 5px;
+}
+.name {
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 117%;
+    letter-spacing: 0.04em;
+    color: var(--light-slate);
+}
+.phone {
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 117%;
+    letter-spacing: 0.04em;
+    color: var(--light-slate);
+}    
+.email {
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 117%;
+    letter-spacing: 0.04em;
+    color: var(--light-slate);
+}
+
+
+
+
+
+
+
 .textarea-input {
     border: 1px solid var(--navy-blue-modal);
     border-radius: 4px;
     width: 360px;
     height: 120px;
 }
-.name-input {
-    border: 1px solid var(--navy-blue-modal);
-    border-radius: 4px;
-    width: 360px;
-    height: 40px;
-}
-.phone-input {
-    border: 1px solid var(--navy-blue-modal);
-    border-radius: 4px;
-    width: 360px;
-    height: 40px;
-}
-.email-input {
-    border: 1px solid var(--navy-blue-modal);
-    border-radius: 4px;
-    width: 360px;
-    height: 40px;
-}
+
 .btn-send {
     border-radius: 4px;
     padding: 16px 32px;
@@ -371,8 +407,6 @@
     color:#fff;
 
 }
-
-
 
 .close-btn {
     width: 24px;
