--- a/css/styles.css
+++ b/css/styles.css
@@ -261,7 +261,9 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    align-items: center;  
+    flex-wrap: nowrap;
+    align-items: center;
+     
 }
 .modal-title {
     font-family: var(--font-family);
@@ -271,7 +273,7 @@
     letter-spacing: 0.02em;
     text-align: center;
     color: var(--navy-blue);
-    margin-top: 40px, auto;
+    
 }
 .form-content {
     display: flex;
@@ -282,18 +284,11 @@
     width: 360px;
     height: 336px;
 }
-.form-group {
+.form-group { 
     width: 360px;
     height: 58px;
-    margin-top: 8px;
     margin-bottom: 8px;
-}
-.input-icon {
-    position: relative;
-    border: 1px solid var(--navy-blue-modal);
-    border-radius: 4px;
-    width: 360px;
-    height: 40px;
+    position: relative;  
 }
 .name-icon {
     padding: 3px 0px;
@@ -303,22 +298,25 @@
     position: absolute;
     left: 5px;
     top: 50%;
-    transform: translateY(-50%);
     transition: -250ms cubic-bezier(0.4, 0, 0.2, 1 );
 }
 .name-input {
     border: 1px solid var(--navy-blue-modal);
     border-radius: 4px;
     width: 360px;
-    height: 40px;   
+    height: 40px;
+    transition: -250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.name-input,
-.name-icon:hover {
-     fill: var(--iris);
+.name-input:hover .input[type="email"] {
+    color: var(--iris);
 }
+
+
+ 
+
 .frame2 {
    display: inline-flex;
-   margin-top: 20px;  
+    
 }
 .chechbox {
     display: inline;
@@ -333,6 +331,12 @@
     border-radius: 2px;
     border: 1px solid var(--navy-blue-modal);
     margin-right: 10px;
+}
+.textarea {
+    border: 1px solid var(--navy-blue-modal);
+    border-radius: 4px;
+    width: 360px;
+    height: 120px;  
 }
 .text-checkbox {
     font-family: var(--font-family);
@@ -350,15 +354,21 @@
     color: var(--iris);
     cursor: pointer;
 }
-.f-n {
+.comment-area {
+    width: 360px;
+    height: 138px;
+    margin-bottom: 40px;
+}
+
+.comment {
     font-family: var(--font-family);
     font-weight: 400;
     font-size: 12px;
     line-height: 117%;
     letter-spacing: 0.04em;
     color: var(--light-slate);
-    margin-bottom: 5px;
 }
+
 .name {
     font-family: var(--font-family);
     font-weight: 400;
@@ -382,19 +392,6 @@
     line-height: 117%;
     letter-spacing: 0.04em;
     color: var(--light-slate);
-}
-
-
-
-
-
-
-
-.textarea-input {
-    border: 1px solid var(--navy-blue-modal);
-    border-radius: 4px;
-    width: 360px;
-    height: 120px;
 }
 
 .btn-send {
