--- a/css/styles.css
+++ b/css/styles.css
@@ -284,39 +284,50 @@
     width: 360px;
     height: 336px;
 }
-.form-group { 
+.inputwithicon { 
     width: 360px;
     height: 58px;
     margin-bottom: 8px;
     position: relative;  
 }
-.name-icon {
-    padding: 3px 0px;
+.svg-icon {
+  
     width: 18px;
     height: 24px;
-    fill: var(--navy-blue-modal);
+    color: var(--navy-blue);
     position: absolute;
-    left: 5px;
-    top: 50%;
-    transition: -250ms cubic-bezier(0.4, 0, 0.2, 1 );
+    left: 20px;
+    top: 50%; 
+}
+.vertical-line {
+    border: 1.25px solid var(--navy-blue);
+    width: 18px;
+    height: 0px;
+    transform: rotate(-90deg);
+    position: absolute;
+}
+.svg:hover{
+    transition: transfom -250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color: var(--iris);
 }
 .name-input {
     border: 1px solid var(--navy-blue-modal);
     border-radius: 4px;
     width: 360px;
-    height: 40px;
+    height: 40px;  
+}
+.name-input:hover{
+
     transition: -250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border: 2px solid var(--iris);
 }
-.name-input:hover .input[type="email"] {
-    color: var(--iris);
+.name-input:focus{
+    transition: -250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border: 2px solid var(--iris);
 }
-
-
- 
 
 .frame2 {
-   display: inline-flex;
-    
+   display: inline-flex;   
 }
 .chechbox {
     display: inline;
@@ -337,6 +348,11 @@
     border-radius: 4px;
     width: 360px;
     height: 120px;  
+}
+.textarea:hover{
+
+    transition: -250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border: 2px solid var(--iris);
 }
 .text-checkbox {
     font-family: var(--font-family);
