--- a/css/styles.css
+++ b/css/styles.css
@@ -237,15 +237,6 @@
     background-color: var(--navy-blue-modal);
     transition: transform 0.3s;
 }
-
-
-
-
-
-
-
-
-
 .modal {
     z-index: 2;
     margin: 0 auto;
@@ -262,8 +253,7 @@
     flex-direction: column;
     justify-content: space-evenly;
     flex-wrap: nowrap;
-    align-items: center;
-     
+    align-items: center;    
 }
 .modal-title {
     font-family: var(--font-family);
@@ -272,8 +262,7 @@
     line-height: 150%;
     letter-spacing: 0.02em;
     text-align: center;
-    color: var(--navy-blue);
-    
+    color: var(--navy-blue);   
 }
 .form-content {
     display: flex;
@@ -415,9 +404,14 @@
     stroke: rgba(0, 0, 0, 0.1);
 }
 .close-svg {
-    fill: var(--navy-blue);
-    width: 100%;
-    height: 100%;    
+    border-radius: 100%;
+    fill: var(--cornflower);
+    stroke-width: 1px;
+    stroke: rgba(0, 0, 0, 0.1);
+    width: 24px;
+    height: 24px;
+    border: black; 
+    border-radius: 50%;   
 }
 .close-btn:hover {
     cursor: pointer;   
